--- a/www/static/staticTest.html
+++ b/www/static/staticTest.html
@@ -7,8 +7,7 @@ Hello!
 <body>
 
     <p>
-        Hello, this is a paragraph. Link:
-        <href>https://marketplace.visualstudio.com/items?itemName=ritwickdey.LiveServer</href>
+        Hello, this is a paragraph. 
     </p>
 
 </body>
